--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -1,6 +1,9 @@
 //
 // Main navbar
 //
+.navbar {
+  padding: 0;
+}
 
 .td-navbar-cover {
   background: $white; // $primary;
@@ -26,16 +29,18 @@
 .td-navbar {
   background: $white; // $primary;
   // min-height: 4rem;
-  height: 50px;
   box-shadow: 0px 2px 1px lighten($graygreen, 40%);
   margin: 0;
   z-index: 32;
   font-family: 'Noto Sans JP', 'Roboto', sans-serif;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  @media (min-width: 576px) {   
+  }
+  @include media-breakpoint-up(lg) {
+    height: 50px;
 
-  @include media-breakpoint-up(md) {
-    position: fixed;
-    top: 0;
-    width: 100%;
   }
 
   .navbar-brand {
@@ -102,10 +107,8 @@
 
     .td-navbar-nav-scroll {
       max-width: 100%;
-      height: 2.5rem;
       margin-top: 0.25rem;
       overflow: hidden;
-      font-size: 0.875rem;
 
       .nav-link {
         padding-right: 0.25rem;
@@ -113,7 +116,6 @@
       }
 
       .navbar-nav {
-        padding-bottom: 2rem;
         overflow-x: auto;
         white-space: nowrap;
         -webkit-overflow-scrolling: touch;
